[Fix] About me paragraph text align

--- a/src/assets/css/about-me.css
+++ b/src/assets/css/about-me.css
@@ -54,3 +54,7 @@
     display: none;
   }
 }
+
+.about-me-paragraph {
+  text-align: justify;
+}
